# rap

./: .detect-secrets.yaml  .dockerignore  .env  .envrc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GITHUB_COPILOT_SETUP.md  JAVASCRIPT_EXTRACTION_SUMMARY.md  PRODUCTION_READY.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_timezone_fix.py  typescript
.github/: COPILOT_QUICK_REFERENCE.md  COPILOT_SETUP.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci-cd.yml  ci.yml  copilot-setup-steps.yml  ghcr-retention.yml  pr-check.yml
docker/: .env  docker-compose-base.yml  docker-compose.dev.yml  docker-compose.prod.http.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
docker/caddy/: Caddyfile  Caddyfile.prod  Caddyfile.prod.http
docker/caddy/error-pages/: 400.html  404.html  500.html  502.html  README.md
docker/nginx/: nginx.conf  nginx.prod.conf
docker/nginx/error-pages/: 403.html  README.md
docker/nginx/ssl/: cert.pem  key.pem
docs/: 0_setup.md  1_secret_management.md  2_dependency_management.md  3_pre_commit_hooks.md  4_code_quality.md  CI_CD_SETUP.md  DEPLOYMENT.md  PWA_IMPLEMENTATION.md  automatic_reminders_admin_guide.md  email_notifications.md  progress.md  project_description.md  roadmap.md  security.md  static_versioning.md
example/: __init__.py  using_secrets.ipynb  using_secrets.py
scripts/: copilot-setup.sh  copilot-stop.sh  dependency.sh  deploy.sh  generate_secrets.sh  new-branch.sh  setup.sh  test-cicd-fallback.sh  test-copilot-setup.sh  vps-setup.sh
scripts/hooks/: black-autoformat.sh  check-requirements.sh  nbstripout-autoadd.sh  precommit_pytest.sh
test_env/: pyvenv.cfg
tests/utils/: test_secrets.py
utils/: __init__.py  secrets.py
web/: .env  db.sqlite3  manage.py  test.db
web/attendance/: admin.py  models.py  urls.py  views.py
web/attendance/migrations/: 0001_initial.py  0002_initial.py
web/events/: admin.py  analytics_views.py  dashboard_views.py  forms.py  models.py  test_statistics.py  tests.py  urls.py  views.py
web/events/migrations/: 0001_initial.py  0002_alter_event_options_event_created_at_and_more.py  0003_event_recurrence_end_date_event_recurrence_type_and_more.py  0004_matchstatistic.py
web/events/templatetags/: date_filters.py  event_extras.py  static_versioning.py
web/help/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
web/help/migrations/: 0001_initial.py
web/notifications/: README.md  admin.py  apps.py  celery_admin.py  models.py  tasks.py  test_pwa.py  tests.py  urls.py  utils.py  views.py
web/notifications/migrations/: 0001_initial.py  0002_add_schedule_models.py  0002_scheduleconfiguration_eventscheduleoverride.py  0003_alter_automaticreminderlog_reminder_type_and_more.py  0004_alter_scheduleconfiguration_task.py  0005_alter_automaticreminderlog_reminder_type_and_more.py  0006_alter_automaticreminderlog_reminder_type_and_more.py
web/polls/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
web/polls/migrations/: 0001_initial.py
web/rap_web/: asgi.py  celery.py  health.py  local_settings.py  middleware.py  security.py  security_middleware.py  settings.py  test_settings.py  urls.py  wsgi.py
web/static/: app.js  manifest.json  style.css  sw.js
web/static/css/: style.css
web/static/js/: app.js
web/staticfiles/css/: style.css
web/staticfiles/js/: app.js
web/templates/: base.html  offline.html
web/templates/components/: notification_settings.html  profile_completion_popup.html
web/templates/dashboard/: invaller.html  main.html
web/templates/help/: admin_bug_detail.html  admin_bug_list.html  bug_detail.html  bug_report_create.html  index.html  my_bug_reports.html
web/templates/polls/: poll_create.html  (+3 more)
web/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
(+66 files in other folders)
